--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <li class="has-dropdown animals">
       <a href="#"> Dashboard</a>
       <ul class="sidebar-dropdown list-unstyled">
-        <li><a href="#">Widget Dashboard</a></li>
-        <li><a href="#">Chart Dashboard</a></li>
-        <li><a href="#">Real-Time Dashboard</a></li>
+        <li class="animals"><a href="#">Widget Dashboard</a></li>
+        <li class="animals"><a href="#">Chart Dashboard</a></li>
+        <li class="animals"><a href="#">Real-Time Dashboard</a></li>
       </ul>
     </li>
 
@@ -40,14 +40,14 @@
       <ul class="sidebar-dropdown list-unstyled">
         <li class="has-dropdown animals"><a href="#">Web Development</a>
             <ul class="sidebar-dropdown list-unstyled">
-                <li><a href="#">React JS</a></li>
-                <li><a href="#">Angular JS</a></li>
+                <li class="animals"><a href="#">React JS</a></li>
+                <li class="animals"><a href="#">Angular JS</a></li>
               </ul>
         </li>
         <li class="has-dropdown animals"><a href="#">Android Development</a>
             <ul class="sidebar-dropdown list-unstyled">
-                <li><a href="#">React Native</a></li>
-                <li><a href="#">Flutter</a></li>
+                <li class="animals"><a href="#">React Native</a></li>
+                <li class="animals"><a href="#">Flutter</a></li>
               </ul>
         </li>
         <li class="animals"><a href="#">DevOps</a></li>
@@ -57,22 +57,6 @@
     </li>
   </ul>
 </aside>
-
-<!-- <section id="wrapper">
-  <nav class="navbar navbar-expand-md">
-    <div class="container-fluid mx-2">
-      <div class="collapse navbar-collapse" id="toggle-navbar">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i data-show="show-side-navigation1" class="uil-bars show-side-btn"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</section> -->
 
 <script src="./index.js"></script>
 <script src="./home.js"></script>
